--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 model/faceutils/dlibutils/lms.dat filter=lfs diff=lfs merge=lfs -text
 model/faceutils/mask/resnet.pth filter=lfs diff=lfs merge=lfs -text
+model/checkpoints/BeautyREC.pt filter=lfs diff=lfs merge=lfs -text
